# best-of-python-dashboard

./: .gitignore  Home.py  LICENCE.MD  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.tom
pages/: 1_Ranking.py  2_Growth.py
src/cache/: manager.py  manager.py.tmp.23840.1774796885715  manager.py.tmp.23840.1774796892162  manager.py.tmp.23840.1774796897199
src/data/: github_client.py  github_client.py.tmp.23840.1774796880127  loader.py  pypi_client.py  pypi_client.py.tmp.23840.1774796865565
src/utils/: logger.py  styles.py
tests/: conftest.py
tests/unit/: test_cache_manager.py  test_github_client.py  test_loader.py  test_pypi_client.py
