[project]
name = "best-of-python-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "loguru>=0.7.3",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "mypy>=1.19.1",
]
