[project]
name = "best-of-python-dashboard"
version = "0.1.0"
description = "A Streamlit dashboard for visualizing Python library statistics from GitHub and PyPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "loguru>=0.7.3",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
]
